# test-cython-scikit

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml
src/: cmod.pyx  util.c  util.h
src/test_cython_scikit/: __init__.py  cmod.pyi
tests/: test_compiled.py  test_package.py
